--- a/clubs.html
+++ b/clubs.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/src/css/materialize.min.css" />
   <link rel="stylesheet" href="/src/css/style.css">
   <link rel="manifest" href="/manifest.json" />
-  <meta name="theme-color" content="#00897B" />
+  <meta name="theme-color" content="#14274E" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
